# HospitalReadmissionPrediction

./: Makefile  README.md  pyproject.toml
data/: get_data.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1 - Initial Data Analysis.ipynb  2 - Initial Data Change.ipynb
