[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hospital_readmission_prediction"
version = "0.0.1"
description = "Develop models to predict if a patient will be readmitted on the hospital after release"
authors = [
  { name = "Jessica B. Moura" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["hospital_readmission_prediction"]
include = ["pyproject.toml", "hospital_readmission_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["hospital_readmission_prediction"]
force-sort-within-sections = true

